--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,13 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
-loader_version=0.15.10
+yarn_mappings=1.20.6+build.3
+loader_version=0.15.11
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=mugmod
+maven_group=com.mugmod
+archives_base_name=mug-mod
 
 # Dependencies
-fabric_version=0.97.8+1.20.6
+fabric_version=0.99.0+1.20.6
